# dispatcher-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: document.py  qa_log.py
backend/app/services/: chunker.py  evidence.py  note_analyzer.py  ocr.py  parser.py  providers.py  retrieval.py  storage.py
docs/: api.md  siliconflow.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css
test_assets/: 签派助手测试手册.txt
tests/: test_chunker.py  test_evidence.py  test_note_analyzer.py  test_ocr.py
