[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dispatcher-assistant"
version = "0.1.0"
description = "签派知识库助手 MVP 后端"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "python-multipart>=0.0.9",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "pgvector>=0.2.5",
  "pymupdf>=1.24",
  "boto3>=1.34",
  "openai>=1.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.4",
]
[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py39"
